--- a/kadal.html
+++ b/kadal.html
@@ -32,6 +32,10 @@
       display: none; 
     }
   }
+  #floated{
+      float: left;
+      width: 305px;
+  }
   </style>
 </head>
 <body>
@@ -46,9 +50,16 @@
       </button>
       <a class="navbar-brand" href="#" style="position: absolute; margin-left: 45%;font-family: sans-serif;">Dunia Reptile</a>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar" style="position: absolute;">
-      <ul class="nav navbar-nav" >
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="Shop.html">Shop</a></li>
+        <li><a href="Event.html">Event</a></li>
+         <li><a href="About.html">About</a></li>
+         <li><a href="Contacts_us.html">Contacts Us</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
   </div>
@@ -64,18 +75,18 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox" >
       <div class="item active">
-        <img src="images/sanca.jpg" alt="Image" style="height: 700px">
+        <img src="images/kadal2.jpg" alt="Image" style="height: 700px">
         <div class="carousel-caption">
-          <h3>Sanca Hijau</h3>
-          <p>Morelia viridis</p>
+          <h3>Bearded dragon</h3>
+          <p>Pogona</p>
         </div>      
       </div>
 
       <div class="item">
-        <img src="images/viper2.jpg" alt="Image" width="50%" style="height: 700px">
+        <img src="images/Biawak.jpg" alt="Image" width="50%" style="height: 700px">
         <div class="carousel-caption">
-          <h3>Viper</h3>
-          <p>Viperidae</p>
+          <h3>Biawak</h3>
+          <p>Varanus</p>
         </div>      
       </div>
     </div>
@@ -92,19 +103,75 @@
 </div>
   
 <div class="container text-center">    
-  <h3>HOT NEWS !</h3><br>
-  <div class="container text-center">
-    <a href="#"><img src="images/kadal.jpg"  alt="Image" width="300" height="193"></a>
-    <h2>Kadal</h2>
-    <p>Sebuah penemuan terbaru mengungkapkan, beberapa kadal New Guinean memiliki darah yang sangat beracun dan mampu membunuh manusia 40 kali lipat, ternyata bisa menjadi obat penyakit.
+  <h3>Bangsa Kadal</h3>
+  <br>
 
-Selain mematikan, warna hijau kekuning-kuningan pun mencolok dan memiliki tulang serta lidah yang berwarna hijau juga. Warna ini berasal dari tingkat tinggi biliverdin, pigmen empedu hijau yang dihasilkan sebagai produk limbah yang menyebabkan penyakit kuning pada manusia.
-
-Para ilmuwan berpikir bahwa prevalensi darah hijau di antara kadal New Guinean berarti bertentangan dengan darah beracun, yang kemungkinan bermanfaat bagi kesehatan pada manusia.
-
-"Selain memiliki konsentrasi tertinggi biliverdin yang tercatat untuk hewan apa pun, kadal ini entah bagaimana telah berevolusi terhadap toksisitas pigmen empedu," kata mahasiswa pascasarjana Zachary Rodriguez, yang merupakan penulis utama dari makalah yang mengeksplorasi asal-usul darah yang tidak biasa ini. </p>
-
+  <div class="text-justify">
+    <div id="floated">
+      <a href="#"><img src="images/kadal3.jpg"  alt="Image" width="300" height="193"></a>
+      <h4 class="text-center" style="background-color: black; color: white;">Chameleon</h4>
+    </div>
+     <p>Ini adalah sejenis kadal-kadalan yang termasuk dalam famili Chamaeleonidae. Banyak orang yang salah sangka bahwa Chameleon dan Bunglon itu sama, ternyata mereka berbeda, apakah yang membedakan mereka berdua? dari postur tubuh jelas berbeda, Bunglon langsing dan berjalan cepat, sedangkan Chameleon gemuk dan gerakannya lambat. Perubahan warna(mimikri) pada mereka juga berbeda, Bunglon akan merubah warnanya sesuai dengan emosi mereka, sedangkan Chameleon akan merubah warnanya sesuai tempatnya. Chameleon banyak dipelihara orang, melainkan karena warna mereka menarik perawatannya pun cukup mudah, hanya memberi makan, membersihkan kandang, dan menyesuaikan suhu kandang.</p>
   </div>
+</div>
+
+<div class="container text-center">    
+  <h3></h3>
+  <br>
+
+  <div class="text-justify">
+    <div id="floated">
+      <a href="#"><img src="images/Biawak.jpg"  alt="Image" width="300" height="193"></a>
+      <h4 class="text-center" style="background-color: black; color: white;">Biawak</h4>
+    </div>
+     <p>Nama kerennya adalah Kadal Water Monitor. Jenis reptil yang memiliki nama latin Varanus Salvator ini juga termasuk salah satu jenis reptil yang kerap dipelihara, dan sering ditemukan di lingkungan sekitar. Meski termasuk jenis biawak yang aman dan biasa dipelihara, binatang ini tetap membutuhkan pengawasan karena di alam liar ia termasuk salah satu jenis binatang pemangsa. Bahkan di lingkungan sekitar rumah, biawak sering dianggap sebagai musuh bebuyutan para peternak ayam, karena ia sering memangsa ayam-ayam yang berkeliaran di sekitarnya.</p>
+  </div>
+</div>
+
+<div class="container text-center">    
+  <h3></h3>
+  <br>
+
+  <div class="text-justify">
+    <div id="floated">
+      <a href="#"><img src="images/kadal2.jpg"  alt="Image" width="300" height="193"></a>
+      <h4 class="text-center" style="background-color: black; color: white;">Bearded Dragon</h4>
+    </div>
+     <p>Jenis kadal yang bisa dipelihara untuk pemula yang keempat adalah Bearded Dragon, kadal ini sedikit lebih panjang dibanding yang pertama, kedua dan ketiga. Panjangnya berkisar 35 cm hingga 60 cm.
+
+Meski begitu, kadal Bearded Dragon ini jinak kok, mudah dalam perawatan. Hanya saja sedikit membutuhkan tempat yang lebih besar.
+
+Kadal ini bersifat omnivora, jadi selain serangga juga bisa sahabat kasih pakan sayuran.</p>
+  </div>
+</div>
+
+<div class="container text-center">    
+  <h3></h3>
+  <br>
+
+  <div class="text-justify">
+    <div id="floated">
+      <a href="#"><img src="images/kadal4.jpg"  alt="Image" width="300" height="193"></a>
+      <h4 class="text-center" style="background-color: black; color: white;">Savannah Monitor</h4>
+    </div>
+     <p>Kadal ini berasal dari Afrika kadal ini juga terkadang disebut Bosc Monitor. Ukuran tubuh kadal Savannah Monitor ini cukup pendek, hampir menyerupai biawak, namun cukup besar untuk digolongkan dalam kategori kadal. Savannah Monitor bisa tumbuh dengan panjang tubuh mencapai 1 meter, dan bertahan hidup sekitar 11 tahun lamanya. Jenis kadal yang satu ini kurang suka berbaur dan berkelompok, ia lebih suka menyendiri. Makanan utamanya adalah serangga dan tikus.</p>
+  </div>
+</div>
+
+<div class="container text-center">    
+  <h3></h3>
+  <br>
+
+  <div class="text-justify">
+    <div id="floated">
+      <a href="#"><img src="images/kadal.jpg"  alt="Image" width="300" height="193"></a>
+      <h4 class="text-center" style="background-color: black; color: white;">Soa Payung</h4>
+    </div>
+     <p>Soa Payung  atau dalam bahasa latinnya lebih dikenal dengan nama Chlamydosaurus kingii adalah binatang reptil yang memiliki teknik pertahanan diri yang unik untuk menghindar dari ancaman pemangsanya dialam liar. Sesuai dengan keunikan yang dimilikinya,  Spesies kadal yang satu-satunya anggota dari genus Chlamydosaurus ini berasal dari Autralia bagian utara selain itu juga ditemukan juga terdapat di selatan Papua New Guinea.
+
+Jenis reptil yang memiliki penampilan garang ini juga lebih dikenal dengan nama Frilled Dragon atau ada juga yang menyebutnya dengan nama Frilled Lizard. Pemberian nama berdasarkan jumbai yang ada pada lehernya, jumbai ini biasanya digunakannya untuk mempertahankan diri atau menakut-nakuti hewan lain yang dianggapnya sebagai ancaman dengan cara mengembangkan jumbai melingkar sehingga membuat tubuhnya seolah-olah terlihat lebih besar. ( breeding )</p>
+  </div>
+</div>
   
 </div><br>
 
