--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
   </style>
 </head>
 <body>
-
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -46,9 +45,16 @@
       </button>
       <a class="navbar-brand" href="#" style="position: absolute; margin-left: 45%;font-family: sans-serif;">Dunia Reptile</a>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar" style="position: absolute;">
-      <ul class="nav navbar-nav" >
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
+        <li><a href="Shop.html">Shop</a></li>
+        <li><a href="Event.html">Event</a></li>
+         <li ><a href="About.html">About</a></li>
+         <li><a href="contacts_us.html">Contacts Us</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
   </div>
@@ -66,16 +72,16 @@
       <div class="item active">
         <img src="images/sanca.jpg" alt="Image" style="height: 700px">
         <div class="carousel-caption">
-          <h3>Sanca Hijau</h3>
-          <p>Morelia viridis</p>
+          <h3>Ular</h3>
+          <p></p>
         </div>      
       </div>
 
       <div class="item">
-        <img src="images/viper2.jpg" alt="Image" width="50%" style="height: 700px">
+        <img src="images/bunglon2.jpg" alt="Image" width="50%" style="height: 700px">
         <div class="carousel-caption">
-          <h3>Viper</h3>
-          <p>Viperidae</p>
+          <h3>Chameleon</h3>
+          <p></p>
         </div>      
       </div>
     </div>
@@ -92,34 +98,38 @@
 </div>
   
 <div class="container text-center">    
-  <h3>HOT NEWS !</h3><br>
+  <h3>JENIS-JENIS REPTIL</h3><br>
   <div class="row">
     <div class="col-sm-4">
       <div class="panel panel-primary">
         <div class="panel-body"><center><a href="kura.html"><img src="images/kurakura.jpg"  alt="Image" width="300" height="193"></a></center></div>
-        <div class="panel-footer"><a href="kura.html">Kura-kura</a></div>
+        <div class="panel-footer"><a href="kura.html">bangsa Kura-kura</a></div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="panel panel-primary"> 
         <div class="panel-body"><center><a href="kadal.html"><img src="images/kadal.jpg"  alt="Image" width="300" height="193"></a><center></div>
-        <div class="panel-footer">Kadal</div>
+        <div class="panel-footer"><a href="kadal.html">bangsa Kadal</a></div>
       </div>    
     </div>
     <div class="col-sm-4">
       <div class="panel panel-primary"> 
-        <div class="panel-body"><center><a href="komodo.html"><img src="images/komodo.jpg"  alt="Image" width="300" height="193"></a><center></div>
-        <div class="panel-footer">Komodo</div>
+        <div class="panel-body"><center><a href="buaya.html"><img src="images/buaya.jpg"  alt="Image" width="300" height="193"></a><center></div>
+        <div class="panel-footer"><a href="buaya.html">bangsa buaya</a></div>
       </div>    
     </div>
     </div>
     <div class="row">
     <div class="col-sm-4">
+
+    </div>
+    <div class="col-sm-4">
       <div class="panel panel-primary"> 
-        <div class="panel-body"><center><a href="Viper.html"><img src="images/viper.jpg"  alt="Image" width="300" height="193"></a><center></div>
-        <div class="panel-footer">viper</div>
+        <div class="panel-body"><center><a href="ular.html"><img src="images/viper.jpg"  alt="Image" width="300" height="193"></a><center></div>
+        <div class="panel-footer"><a href="ular.html">bangsa ular</a></div>
       </div>    
-    </div></div>
+    </div>
+  </div>
    
     </div>
   </div>
