--- a/buaya.html
+++ b/buaya.html
@@ -107,9 +107,9 @@
   <br>
 
   <div class="text-justify">
-    <div id="floated">
+    <div class ="text-center">
       <a href="#"><img src="images/buayamuara.jpg"  alt="Image" width="300" height="193"></a>
-      <h4 class="text-center" style="background-color: black; color: white;">Buaya Muara</h4>
+      <h4  style="background-color: black; color: white;">Buaya Muara</h4>
     </div>
      <p>Buaya muara atau buaya bekatak (Crocodylus porosus) adalah jenis buaya terbesar di dunia. Dinamai demikian karena buaya ini terutama hidup di sungai-sungai dan di dekat laut (muara). Buaya ini juga dikenal dengan nama buaya air asin, buaya laut, dan nama-nama lokal lainnya. Dalam bahasa Inggris, dikenal dengan nama Saltwater crocodile, Indo-Australian crocodile, dan Man-eater crocodile. Nama umumnya, Man-eater="pemakan manusia", karena buaya ini terkenal pernah (dan sering) memangsa manusia yang memasuki wilayahnya. Buaya ini tersebar di seluruh perairan dataran rendah dan perairan pantai di daerah tropis Asia Selatan, Asia Tenggara, dan Australia (Indo-Australia).</p>
   </div>
@@ -120,7 +120,7 @@
   <br>
 
   <div class="text-justify">
-    <div id="floated">
+    <div class ="text-center">
       <a href="#"><img src="images/buaya2.jpg"  alt="Image" width="300" height="193"></a>
       <h4 class="text-center" style="background-color: black; color: white;">buaya senyulong</h4>
     </div>
@@ -138,7 +138,7 @@ Moncongnya pipih dan tajam. Kulitnya berwarna kecoklatan waktu muda dan menghita
   <br>
 
   <div class="text-justify">
-    <div id="floated">
+    <div class ="text-center">
       <a href="#"><img src="images/buaya3.jpg"  alt="Image" width="300" height="193"></a>
       <h4 class="text-center" style="background-color: black; color: white;">Buaya Siam</h4>
     </div>
