--- a/kadal.html
+++ b/kadal.html
@@ -33,8 +33,9 @@
     }
   }
   #floated{
-      float: left;
+      float: right;
       width: 305px;
+      margin-left: 20px;
   }
   </style>
 </head>
