--- a/shop.html
+++ b/shop.html
@@ -151,9 +151,31 @@
           <div class="panel-heading">Chameleon</div>
           <div class="panel-body"><img src="images/kadal3.jpg" width="300" height="200"  alt="Image"></div>
           <div class="panel-footer text-center">5.000.000</div>
+
         </div>
       </div>
     </div>
+
+
+<div ng-app="myApp" ng-controller="myCtrl"> 
+
+<p>Welcome to Shop:</p>
+
+<h1>{{DUNIA REPTIL}}</h1>
+
+</div>
+
+<p>Laman ini berisi tentang jenis jenis reptil yang dapat dipelihara oleh pengunjung dan bukan merupakan reptil yang berbahaya.</p>
+
+<script>
+var app = angular.module('myApp', []);
+app.controller('myCtrl', function($scope, $http) {
+  $http.get("welcome.htm")
+  .then(function(response) {
+      $scope.myWelcome = response.data;
+  });
+});
+</script>
   </div><br><br>
 
   <footer class="container-fluid text-center" style="background-color: #73a2ef">
