--- a/ular.html
+++ b/ular.html
@@ -33,8 +33,12 @@
     }
 
   }
-  #floated{
+  #floatedkiri{
       float: left;
+      width: 305px;
+  }
+  #floatedkanan{
+      float: right;
       width: 305px;
   }
   </style>
@@ -107,7 +111,7 @@
   <h3>Bangsa Ular</h3><br>
 
   <div class="text-justify">
-    <div id="floated">
+    <div id="floatedkiri">
       <a href="#"><img src="images/sanca2.jpg"  alt="Image" width="300" height="193"></a>
       <h4 class="text-center" style="background-color: black; color: white;">Sanca Kembang </h4>
     </div>
@@ -124,7 +128,7 @@ Ular sanca kembang lebih senang menunggu daripada aktif berburu. Spesies ini mem
   <h3></h3><br>
 
   <div class="text-justify">
-    <div id="floated">
+    <div id="floatedkanan">
       <a href="#"><img src="images/pelangi.jpg"  alt="Image" width="300" height="193"></a>
       <h4 class="text-center" style="background-color: black; color: white;">Ular Pelangi</h4>
     </div>
@@ -140,7 +144,7 @@ Dinamakan ular pelangi dikarenakan warna pada bagian tubuhnya berwarna cokelat s
   <h3></h3><br>
 
   <div class="text-justify">
-    <div id="floated">
+    <div id="floatedkiri">
       <a href="#"><img src="images/gadung.jpg"  alt="Image" width="300" height="193"></a>
       <h4 class="text-center" style="background-color: black; color: white;">Ular Gadung</h4>
     </div>
@@ -158,7 +162,7 @@ Ular gadung aktif pada siang hari, ular ini akan memburu mangsanya, seperti kodo
   <h3></h3><br>
 
   <div class="text-justify">
-    <div id="floated">
+    <div id="floatedkanan">
       <a href="#"><img src="images/kobra.jpg"  alt="Image" width="300" height="193"></a>
       <h4 class="text-center" style="background-color: black; color: white;"> Ular Cobra</h4>
     </div>
@@ -170,7 +174,7 @@ Ular gadung aktif pada siang hari, ular ini akan memburu mangsanya, seperti kodo
   <h3></h3><br>
 
   <div class="text-justify">
-    <div id="floated">
+    <div id="floatedkiri">
       <a href="#"><img src="images/Viper.jpg"  alt="Image" width="300" height="193"></a>
       <h4 class="text-center" style="background-color: black; color: white;"> Ular Viper</h4>
     </div>
