--- a/contacts_us.html
+++ b/contacts_us.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+ <script src="bower_components/angular/angular.js"></script>
+  <script src="app.js"></script>
 <head>
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
@@ -79,6 +81,8 @@
       </div>
     </div>
   </nav>
+          <!--===== facebook like and share button markup =====-->
+          <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
 
   <div class="container-fluid text-center">    
     <div class="row content" style="color:white;">
@@ -90,6 +94,34 @@
       <p> - Alamat    : Jalan Gejayan No.12</p>
       <p> - Instagram : @DuniaReptil</p>
     </div>
+
+    <!--===== facebook share & like button --=====-->
+      <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/id_ID/sdk.js#xfbml=1&version=v3.0';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!--===== / end facebook share & like button --=====-->
+
+
+
+<div id="googleMap" style="width:100%;height:200px;"></div>
+
+<script>
+function myMap() {
+var mapProp= {
+    center:new google.maps.LatLng(51.508742,-0.120850),
+    zoom:5,
+};
+var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
     <br>
     <br>
     <br>
