membenarkan tombol di header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Dunia Reptil</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -125,9 +125,9 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="Shop.html">Shop</a></li>
-        <li><a href="Event.html">Event</a></li>
-         <li ><a href="About.html">About</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="event.html">Event</a></li>
+         <li ><a href="about.html">About</a></li>
          <li><a href="contacts_us.html">Contacts Us</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
