--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
           <li ><a href="index.html">Home</a></li>
-          <li><a href="Shop.html">Shop</a></li>
-          <li><a href="Event.html">Event</a></li>
-          <li class="active"><a href="About.html">About</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="event.html">Event</a></li>
+          <li class="active"><a href="about.html">About</a></li>
           <li><a href="contacts_us.html">Contacts Us</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
@@ -61,6 +61,7 @@
       </div>
     </div>
   </nav>
+
 
 
   <div class="container-fluid" >
@@ -76,7 +77,7 @@
         <img src="images/bunglon3.jpg" width="350" height="200">
       </div>
 
-      <div class="col-sm-9">
+      <div class="col-sm-8" style="margin-left: 30px;">
         <h4><small></small></h4>
         <hr>
         <h2>About Us</h2>
@@ -86,7 +87,7 @@
 
 
 
-        <footer class="container-fluid text-center" style="background-color: #73a2ef">
+        <footer class="container-fluid text-center" style="background-color: #73a2ef; clear: left;">
           <p>Copy Right &copy; by arifkusyairi</p>
         </footer>
 
