--- a/contacts_us.html
+++ b/contacts_us.html
@@ -70,9 +70,9 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="Shop.html">Shop</a></li>
-          <li><a href="Event.html">Event</a></li>
-          <li ><a href="About.html">About</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="event.html">Event</a></li>
+          <li ><a href="about.html">About</a></li>
           <li class="active"><a href="contacts_us.html">Contact Us</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
