--- a/kadal.html
+++ b/kadal.html
@@ -54,10 +54,10 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="Shop.html">Shop</a></li>
-        <li><a href="Event.html">Event</a></li>
-         <li><a href="About.html">About</a></li>
-         <li><a href="Contacts_us.html">Contacts Us</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="event.html">Event</a></li>
+         <li><a href="about.html">About</a></li>
+         <li><a href="contacts_us.html">Contacts Us</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
