--- a/shop.html
+++ b/shop.html
@@ -54,9 +54,9 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="Shop.html">Shop</a></li>
-          <li><a href="Event.html">Event</a></li>
-          <li ><a href="About.html">About</a></li>
+          <li class="active"><a href="shop.html">Shop</a></li>
+          <li><a href="event.html">Event</a></li>
+          <li ><a href="about.html">About</a></li>
           <li><a href="contacts_us.html">Contacts Us</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
