--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </div>
     <div class="col-sm-4">
       <div class="panel panel-primary"> 
-        <div class="panel-body"><center><a href="kadal.html"><img src="images/kadal.jpg"  alt="Image" width="300" height="193"></a><center></div>
+        <div class="panel-body"><center><a href="kadal.html"><img src="images/Kadal.jpg"  alt="Image" width="300" height="193"></a><center></div>
         <div class="panel-footer"><a href="kadal.html">bangsa Kadal</a></div>
       </div>    
     </div>
