--- a/event.html
+++ b/event.html
@@ -61,7 +61,7 @@
         <div class="row">
           <div class="col-sm-3" style="margin-bottom: 30px">
             <div class="well">
-             <img src="images/Event.jpg" class="img-thumbnail" height="300" width="200" alt="Avatar">
+             <img src="images/event.jpg" class="img-thumbnail" height="300" width="200" alt="Avatar">
             </div>
          </div>
          <div class="col-sm-9" style="margin-bottom: 30px">
@@ -73,7 +73,7 @@
       <div class="row">
         <div class="col-sm-3">
           <div class="well">
-           <img src="images/Event2.jpg" class="img-thumbnail" height="300" width="200" alt="Avatar">
+           <img src="images/event2.jpg" class="img-thumbnail" height="300" width="200" alt="Avatar">
          </div>
        </div>
        <div class="col-sm-9">
@@ -85,7 +85,7 @@
     <div class="row">
       <div class="col-sm-3">
         <div class="well">
-          <img src="images/Event3.jpeg" class="img-thumbnail" height="300" width="200" alt="Avatar">
+          <img src="images/event3.jpeg" class="img-thumbnail" height="300" width="200" alt="Avatar">
        </div>
      </div>
      <div class="col-sm-9">
@@ -97,7 +97,7 @@
   <div class="row">
     <div class="col-sm-3">
       <div class="well">
-      <img src="images/Event4.jpg" class="img-thumbnail" height="300" width="200" alt="Avatar">
+      <img src="images/event4.jpg" class="img-thumbnail" height="300" width="200" alt="Avatar">
      </div>
    </div>
    <div class="col-sm-9">
