--- a/kadal.html
+++ b/kadal.html
@@ -109,7 +109,7 @@
 
   <div class="text-justify">
     <div id="floated">
-      <a href="#"><img src="images/kadal3.jpg"  alt="Image" width="300" height="193"></a>
+      <a href="#"><img src="images/Kadal3.jpg"  alt="Image" width="300" height="193"></a>
       <h4 class="text-center" style="background-color: black; color: white;">Chameleon</h4>
     </div>
      <p>Ini adalah sejenis kadal-kadalan yang termasuk dalam famili Chamaeleonidae. Banyak orang yang salah sangka bahwa Chameleon dan Bunglon itu sama, ternyata mereka berbeda, apakah yang membedakan mereka berdua? dari postur tubuh jelas berbeda, Bunglon langsing dan berjalan cepat, sedangkan Chameleon gemuk dan gerakannya lambat. Perubahan warna(mimikri) pada mereka juga berbeda, Bunglon akan merubah warnanya sesuai dengan emosi mereka, sedangkan Chameleon akan merubah warnanya sesuai tempatnya. Chameleon banyak dipelihara orang, melainkan karena warna mereka menarik perawatannya pun cukup mudah, hanya memberi makan, membersihkan kandang, dan menyesuaikan suhu kandang.</p>
@@ -122,7 +122,7 @@
 
   <div class="text-justify">
     <div id="floated">
-      <a href="#"><img src="images/Biawak.jpg"  alt="Image" width="300" height="193"></a>
+      <a href="#"><img src="images/biawak.jpg"  alt="Image" width="300" height="193"></a>
       <h4 class="text-center" style="background-color: black; color: white;">Biawak</h4>
     </div>
      <p>Nama kerennya adalah Kadal Water Monitor. Jenis reptil yang memiliki nama latin Varanus Salvator ini juga termasuk salah satu jenis reptil yang kerap dipelihara, dan sering ditemukan di lingkungan sekitar. Meski termasuk jenis biawak yang aman dan biasa dipelihara, binatang ini tetap membutuhkan pengawasan karena di alam liar ia termasuk salah satu jenis binatang pemangsa. Bahkan di lingkungan sekitar rumah, biawak sering dianggap sebagai musuh bebuyutan para peternak ayam, karena ia sering memangsa ayam-ayam yang berkeliaran di sekitarnya.</p>
@@ -152,7 +152,7 @@ Kadal ini bersifat omnivora, jadi selain serangga juga bisa sahabat kasih pakan 
 
   <div class="text-justify">
     <div id="floated">
-      <a href="#"><img src="images/kadal4.jpg"  alt="Image" width="300" height="193"></a>
+      <a href="#"><img src="images/Kadal4.jpg"  alt="Image" width="300" height="193"></a>
       <h4 class="text-center" style="background-color: black; color: white;">Savannah Monitor</h4>
     </div>
      <p>Kadal ini berasal dari Afrika kadal ini juga terkadang disebut Bosc Monitor. Ukuran tubuh kadal Savannah Monitor ini cukup pendek, hampir menyerupai biawak, namun cukup besar untuk digolongkan dalam kategori kadal. Savannah Monitor bisa tumbuh dengan panjang tubuh mencapai 1 meter, dan bertahan hidup sekitar 11 tahun lamanya. Jenis kadal yang satu ini kurang suka berbaur dan berkelompok, ia lebih suka menyendiri. Makanan utamanya adalah serangga dan tikus.</p>
@@ -165,7 +165,7 @@ Kadal ini bersifat omnivora, jadi selain serangga juga bisa sahabat kasih pakan 
 
   <div class="text-justify">
     <div id="floated">
-      <a href="#"><img src="images/kadal.jpg"  alt="Image" width="300" height="193"></a>
+      <a href="#"><img src="images/Kadal.jpg"  alt="Image" width="300" height="193"></a>
       <h4 class="text-center" style="background-color: black; color: white;">Soa Payung</h4>
     </div>
      <p>Soa Payung  atau dalam bahasa latinnya lebih dikenal dengan nama Chlamydosaurus kingii adalah binatang reptil yang memiliki teknik pertahanan diri yang unik untuk menghindar dari ancaman pemangsanya dialam liar. Sesuai dengan keunikan yang dimilikinya,  Spesies kadal yang satu-satunya anggota dari genus Chlamydosaurus ini berasal dari Autralia bagian utara selain itu juga ditemukan juga terdapat di selatan Papua New Guinea.
