--- a/kadal.html
+++ b/kadal.html
@@ -84,7 +84,7 @@
       </div>
 
       <div class="item">
-        <img src="images/Biawak.jpg" alt="Image" width="50%" style="height: 700px">
+        <img src="images/biawak.jpg" alt="Image" width="50%" style="height: 700px">
         <div class="carousel-caption">
           <h3>Biawak</h3>
           <p>Varanus</p>
