--- a/kura.html
+++ b/kura.html
@@ -75,7 +75,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox" >
       <div class="item active">
-        <img src="images/Aldabra.jpg" alt="Image" style="height: 700px">
+        <img src="images/aldabra.jpg" alt="Image" style="height: 700px">
         <div class="carousel-caption">
           <h3>Aldabra</h3>
           <p>Aldabrachelys gigantea</p>
@@ -133,7 +133,7 @@
 
     <div class="text-justify">
       <div id="floated">
-        <a href="#"><img src="images/Aldabra2.jpg"  alt="Image" width="300" height="193"></a>
+        <a href="#"><img src="images/adabra2.jpg"  alt="Image" width="300" height="193"></a>
         <h4 class="text-center" style="background-color: black; color: white;">Aldabra</h4>
       </div>
       <p>Kura-kura Aldabra berasal dari Pulau Aldabra. Kura-kura ini merupakan salah satu kura-kura terbesar di dunia. Kura-kura jenis ini juga termasuk hewan yang memiliki umur terpanjang dibandingkan hewan-hewan lainnya. Seekor kura-kura Aldabra bisa mencapai umur 255 tahun. Bentuk tubuhnya maupun perilakunya sangat mirip dengan kura-kura raksasa dari Pulau Seychelles. Beberapa orang bahkan menganggap kedua jenis kura-kura tersebut merupakan spesies yang sama.
