--- a/shop.html
+++ b/shop.html
@@ -109,7 +109,7 @@
       <div class="col-sm-4">
         <div class="panel panel-primary">
           <div class="panel-heading">Green Iguana </div>
-          <div class="panel-body"><img src="images/Iguana.png "  width="300" height="200" alt="Image"></div>
+          <div class="panel-body"><img src="images/iguana.png "  width="300" height="200" alt="Image"></div>
           <div class="panel-footer text-center">Rp.550.000</div>
         </div>
       </div>
@@ -123,7 +123,7 @@
       <div class="col-sm-4"> 
         <div class="panel panel-success">
           <div class="panel-heading">Gecko</div>
-          <div class="panel-body"><img src="images/Gecko.jpg"  width="300" height="200" alt="Image"></div>
+          <div class="panel-body"><img src="images/gecko.jpg"  width="300" height="200" alt="Image"></div>
           <div class="panel-footer text-center">Rp.1.000.000</div>
         </div>
       </div>
@@ -149,7 +149,7 @@
       <div class="col-sm-4"> 
         <div class="panel panel-primary">
           <div class="panel-heading">Chameleon</div>
-          <div class="panel-body"><img src="images/kadal3.jpg" width="300" height="200"  alt="Image"></div>
+          <div class="panel-body"><img src="images/Kadal3.jpg" width="300" height="200"  alt="Image"></div>
           <div class="panel-footer text-center">5.000.000</div>
 
         </div>
