--- a/ular.html
+++ b/ular.html
@@ -175,7 +175,7 @@ Ular gadung aktif pada siang hari, ular ini akan memburu mangsanya, seperti kodo
 
   <div class="text-justify">
     <div id="floatedkiri">
-      <a href="#"><img src="images/Viper.jpg"  alt="Image" width="300" height="193"></a>
+      <a href="#"><img src="images/viper.jpg"  alt="Image" width="300" height="193"></a>
       <h4 class="text-center" style="background-color: black; color: white;"> Ular Viper</h4>
     </div>
      <p>Ular ini berukuran tidak terlalu besar, cenderung gemuk, dan agak pendek. Panjang rata-rata sekitar 76 cm, hewan betina cenderung lebih panjang dari yang jantan; kadang-kadang dijumpai pula spesimen yang lebih panjang, hingga 91 cm.
